# profit-pro-app

./: .djlintrc  .env.template  .gitignore  .windsurfrules  01_Front.xlsx  02_Summary.xlsx  03_MediaCentre_Detailed (1).xlsx  2026.02.21 - Project Resources Estimator - Original.xlsx  2026.04.18 - Project Resources Estimator - Master_Rev 2.xlsx  2026.05.10 - Project Resources Estimator - Master_Rev 4.xlsx  ACTION ITEMS.MD  DEVELOPMENT_CYCLE.md  FACTORIES_README.md  HTML_TEMPLATES_REVIEW.md  Item Library.xlsx  Lephadimisha_BOQ_Report .xlsx  PDF_DOWNLOAD_FEATURE.md  Project Upload by WBS_ Demo.xlsx  Project set-up Template.xlsx  README.md  SITE_MANAGEMENT_IMPLEMENTATION.md  SUBSCRIPTIONS.txt  extract_borders.py  extract_styles.py  manage.py  passenger_wsgi.py  pr_body.md  pyproject.toml  run_checks.sh  scratch_test.py  tailwind.config.js  test.xlsx  test_export.xlsx  test_export_2.xlsx  test_script.py  test_script2.py  test_script3.py  tmp_output.html  ty_results.txt  ty_results_full.txt  (+2 more)
.agents/rules/: rules-for-profit-pro-django-application.md
.github/workflows/: cd.yml  ci.yml
app/: conftest.py
app/Account/: DESIGN_DEMO_TIER.md  admin.py  apps.py  auth_urls.py  factories.py  forms.py  models.py  municipality_models.py  services.py  signals.py  subscription_config.py  tasks.py  urls.py  views_reports.py
app/BillOfQuantities/: admin.py  apps.py  factories.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py  views_addendum.py  views_forecast.py  views_payment_certificate.py  views_special_item.py
app/Consultant/: apps.py  forms.py  urls.py  (+1 more)
documentation/: Development Contract.html  Development Plan.html  Development plan.md  ProfitPro SLA.html  ProfitPro-Advanced-Capabilities.html  User-Centered Development Plan.html  searchable_select_widget.md
profitpro/: Development Contract.html  Development Plan.html  ProfitPro SLA.html  ProfitPro-Advanced-Capabilities.html
requirements/: base.txt  local.txt  pdf.txt  prod.txt
scratch/: apply_guardrails.py  check_pg_mismatch.py  detect_html_encoding.py  dump_sheets.py  excel_structure.txt  inspect_excel.py  inspect_template.py  print_specific_rows.py  print_summary_all.py  print_values.py  print_values_front.py  test_pdf.py  verify_daily_log_fix.py
settings/: __init__.py  base.py  local.py  production.py  test.py
tmp/: tmp_resolve.py
(+1648 files in other folders)
