[project]
name = "profit-pro-app"
version = "0.1.0"
description = "Profit Pro App"
authors = [{ name = "Rudolf Jacobs", email = "rudolf@a-i-solutions.co.za" }]

# Ruff configuration
[tool.ruff]
src = ["app", "settings"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DJ"]
ignore = ["E501"]                                              # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["app", "settings"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]               # Unused imports in __init__ files
"*/migrations/*.py" = ["E501", "N806"] # Long lines and naming in migrations
"*/tests/*.py" = ["S101"]              # Allow assert in tests
"*/test_*.py" = ["S101"]               # Allow assert in tests

# Ty (type checking) configuration
[tool.ty.environment]
root = ["."]

# Pytest configuration
[tool.pytest.ini_options]
addopts = "--ds=settings.test --reuse-db --strict-markers"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["app"]
DJANGO_SETTINGS_MODULE = "settings.test"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/apps.py",
    "*/urls.py",
    "*/test/*",
    "*/tests/*",
    "*/conftest.py",
    "*/factories.py",
    "app/Logging/*",
    "app/utils/*",
    "app/theme/*",
    "*/.venv/*",
    "*/venv/*",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.djlint]
extend_exclude = """
./documentation,
./htmlcov,
./app/theme/templates,
./app/core/templates/auth/password_reset_email.html,
./app/Project/templates/client/password_reset_email.html,
./app/Project/templates/client/client_added_email.html
"""
